feat: update library to address MyPy errors
* MyPy - update library to eliminate MyPy type errors
* Docs - restructure documentation such that *.rst files only contain stubs to import source code; all module documentation is now contained within the modules themselves
* Docs - add and rename *.rst files to match updated library structure
* Edge - update "edge" module by simplifying the class hierarchy; removed Connection and MultiConnection classes and made EdgeBase the parent of the entire edge class hierarchy rather than the previous separate hierarchies under Connection and MultiConnection.
* Pylance - enable type checking with VS Code extension Pylance to complement MyPy

--- a/docs/source/bibtex_vertizee.bib
+++ b/docs/source/bibtex_vertizee.bib
@@ -9,7 +9,6 @@
 }
 
 @book{2009:clrs,
-    doi = {10.5555/1614191},
     author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
     title = {Introduction to Algorithms, Third Edition},
     year = {2009},
@@ -20,7 +19,6 @@
 }
 
 @book{1974:deo,
-    doi = {10.5555/1096898},
     author = {Deo, Narsingh},
     title = {Graph Theory with Applications to Engineering and Computer Science (Prentice Hall Series in Automatic Computation)},
     year = {1974},
@@ -36,12 +34,11 @@
     volume = {71B},
     number = {4},
     year = {1967},
-    pages = {233--240},
+    pages = {233-240},
     publisher = {National Bureau of Standards}
 }
 
 @book{2010:epp,
-    doi = {10.5555/1941983},
     author = {Epp, Susanna S.},
     title = {Discrete Mathematics with Applications},
     year = {2010},
@@ -50,6 +47,13 @@
     address = {USA},
     edition = {4th},
     abstract = {Susanna Epp's Discrete Mathematics with Applications, Fourth Edition provides a clear introduction to discrete mathematics. Renowned for her lucid, accessible prose, Epp explains complex, abstract concepts with clarity and precision. This book presents not only the major themes of discrete mathematics, but also the reasoning that underlies mathematical thought. Students develop the ability to think abstractly as they study the ideas of logic and proof. While learning about such concepts as logic circuits and computer addition, algorithm analysis, recursive thinking, computability, automata, cryptography, and combinatorics, students discover that the ideas of discrete mathematics underlie and are essential to the science and technology of the computer age. Overall, Epp's emphasis on reasoning provides students with a strong foundation for computer science and upper-level mathematics courses.}
+}
+
+@misc{2015:eppstein,
+  author = {Eppstein, David},
+  title = {PADS: Python Algorithms and Data Structures},
+  url = {http://www.ics.uci.edu/~eppstein/PADS/},
+  year = {2015}
 }
 
 @article{1987:fredman,
@@ -62,7 +66,6 @@
     volume = {34},
     number = {3},
     issn = {0004-5411},
-    url = {https://doi.org/10.1145/28869.28874},
     doi = {10.1145/28869.28874},
     abstract = {In this paper we develop a new data structure for implementing heaps (priority queues). Our structure, Fibonacci heaps (abbreviated F-heaps), extends the binomial queues proposed by Vuillemin and studied further by Brown. F-heaps support arbitrary deletion from an n-item heap in O(log n) amortized time and all other standard heap operations in O(1) amortized time. Using F-heaps we are able to obtain improved running times for several network optimization algorithms. In particular, we obtain the following worst-case bounds, where n is the number of vertices and m the number of edges in the problem graph: O(n log n + m) for the single-source shortest path problem with nonnegative edge lengths, improved from O(mlog(m/n+2)n);  O(n2log n + nm) for the all-pairs shortest path problem, improved from O(nm log(m/n+2)n);  O(n2log n + nm) for the assignment problem (weighted bipartite matching), improved from O(nmlog(m/n+2)n);  O(mβ(m, n)) for the minimum spanning tree problem, improved from O(mlog log(m/n+2)n); where β(m, n) = min {i | log(i)n ≤ m/n}. Note that β(m, n) ≤ log*n if m ≥ n.  Of these results, the improved bound for minimum spanning trees is the most striking, although all the results give asymptotic improvements for graphs of appropriate densities.},
     journal = {ACM},
@@ -71,28 +74,20 @@
     numpages = {20}
 }
 
-@article{1986:ggst
-    doi = {10.1007/BF02579168},
-    author = {Gabow, H N and Galil, Z and Spencer, T and Tarjan, R E},
-    title = {Efficient Algorithms for Finding Minimum Spanning Trees in Undirected and Directed Graphs},
-    year = {1986},
-    issue_date = {1986},
-    publisher = {Springer-Verlag},
-    address = {Berlin, Heidelberg},
-    volume = {6},
-    number = {2},
-    issn = {0209-9683},
-    url = {https://doi.org/10.1007/BF02579168},
-    journal = {Combinatorica},
-    month = {jan},
-    pages = {109–122},
-    numpages = {14}
+@inproceedings{2008:hss,
+    author = {Aric A. Hagberg and Daniel A. Schult and Pieter J. Swart},
+    title = {Exploring Network Structure, Dynamics, and Function using NetworkX},
+    booktitle = {Proceedings of the 7th Python in Science Conference},
+    pages = {11 - 15},
+    address = {Pasadena, CA USA},
+    year = {2008},
+    editor = {Ga\"el Varoquaux and Travis Vaught and Jarrod Millman}
 }
 
 @book{2013:jungnickel,
     author = {Jungnickel, Dieter},
     title = {Graphs, Networks and Algorithms},
-    series = {Algorithms and Computation in Mathematics}
+    series = {Algorithms and Computation in Mathematics},
     volume = {5},
     year = {2013},
     isbn = {9783642322785},
@@ -102,13 +97,18 @@
     abstract = {The book is a first class textbook and is indispensable for everybody who has to teach combinatorial optimization. It is very helpful for students, teachers, and researchers in this area. The author finds a striking synthesis of nice and interesting mathematical results and practical applications.}
 }
 
-@book{2017:roughgarden,
-    author = {Roughgarden, Tim},
-    title = {Algorithms Illuminated (Part 1): The Basics},
-    year = {2017},
-    isbn = {0999282905},
-    publisher = {Soundlikeyourself Publishing, LLC},
-    abstract = {Algorithms Illuminated is an accessible introduction to the subject for anyone with at least a little programming experience. Part 1 covers asymptotic analysis and big-O notation, divide-and-conquer algorithms and the master method, randomized algorithms, and several famous algorithms for sorting and selection.}
+@article{1985:korf,
+    author = "Richard E. Korf",
+    title = "Depth-first iterative-deepening: An optimal admissible tree search",
+    journal = "Artificial Intelligence",
+    volume = "27",
+    number = "1",
+    pages = "97 - 109",
+    year = "1985",
+    issn = "0004-3702",
+    doi = "https://doi.org/10.1016/0004-3702(85)90084-0",
+    url = "http://www.sciencedirect.com/science/article/pii/0004370285900840",
+    abstract = "The complexities of various search algorithms are considered in terms of time, space, and cost of solution path. It is known that breadth-first search requires too much space and depth-first search can use too much time and doesn't always find a cheapest path. A depth-first iterative-deepening algorithm is shown to be asymptotically optimal along all three dimensions for exponential tree searches. The algorithm has been used successfully in chess programs, has been effectively combined with bi-directional search, and has been applied to best-first heuristic search as well. This heuristic depth-first iterative-deepening algorithm is the only known algorithm that is capable of finding optimal solutions to randomly generated instances of the Fifteen Puzzle within practical resource limits."
 }
 
 @book{2018:roughgarden,
@@ -120,26 +120,7 @@
     abstract = {Algorithms Illuminated is an accessible introduction to the subject for anyone with at least a little programming experience. Part 2 covers graph search and applications, shortest paths, and the usage and implementation of several data structures (heaps, search trees, hash tables, and bloom filters).}
 }
 
-@book{2019:roughgarden,
-    author = {Roughgarden, Tim},
-    title = {Algorithms Illuminated (Part 3): Greedy Algorithms and Dynamic Programming},
-    year = {2019},
-    isbn = {0999282948},
-    publisher = {Soundlikeyourself Publishing, LLC},
-    abstract = {Accessible, no-nonsense, and programming language-agnostic introduction to algorithms. Includes hints or solutions to all quizzes and problems, and a series of YouTube videos by the author accompanies the book. Part 3 covers greedy algorithms (scheduling, minimum spanning trees, clustering, Huffman codes) and dynamic programming (knapsack, sequence alignment, shortest paths, optimal search trees).}
-}
-
-@book{2020:roughgarden,
-    author = {Roughgarden, Tim},
-    title = {Algorithms Illuminated (Part 4): Algorithms for NP-Hard Problems},
-    year = {2020},
-    isbn = {9780999282977},
-    publisher = {Soundlikeyourself Publishing, LLC},
-    abstract = {Fourth book in a series that provides an accessible, no-nonsense, and programming language-agnostic introduction to algorithms. Includes hints or solutions to all quizzes and problems, and a series of YouTube videos by the author accompanies the book. Part 4 covers algorithmic tools for tackling NP-hard problems (heuristic algorithms, local search, dynamic programming, MIP and SAT solvers) and techniques for quickly recognizing NP-hard problems in the wild.}
-}
-
 @book{1983:tarjan,
-    doi = {10.5555/3485},
     author = {Tarjan, Robert Endre},
     title = {Data Structures and Network Algorithms},
     year = {1983},
