--- a/docs/source/tutorials/spanning_tree_arborescence.ipynb
+++ b/docs/source/tutorials/spanning_tree_arborescence.ipynb
@@ -21,8 +21,7 @@
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/trees.ipynb)\n",
     "\n",
-    "# Tutorial: Forests, Trees, and Arborescences\n",
-    "\n"
+    "# Tutorial: Spanning trees, arborescences, forests, and branchings"
    ],
    "cell_type": "markdown",
    "metadata": {}
