fix: change types to address MyPy errors
* Eliminate generic Edge type parameter `E` and instead use a single covariant Vertex type parameter `V_co`. The only exception is in function/method parameter contexts where covariant types are not allowed, then use invariant type parameter `V`. This change means that instead using two type-parameters, only one type-parameter is needed. This works because the vertex type substituted for a vertex type parameter uniquely determines both the graph type as well as the edge type.

* Rename `EdgeInterface` to `EdgeBase` and rename the previous `EdgeBase` to `MutableEdgeBase`. This naming is more consistent with the Python standard library.

* Rename `G` to `GraphBase` to avoid confusion with type-parameters. Add a type-parameter `G` for use in functions.

* path_utils.py - make ShortestPath accept a generic type-parameter.

* Search algorithms – refactor `get_adjacent_to_child` function into search_utils.py.

* spanning_utils.py - Make `Cycle` a non-generic class to avoid excessive type casting.

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -354,7 +354,7 @@
     }
    ],
    "source": [
-    "g[4, 4].is_loop()"
+    "g.get_edge(4, 4).is_loop()"
    ]
   },
   {
@@ -368,7 +368,7 @@
     "Edge objects (`Edge` and `DiEdge`) have an `attr` dictionary for storing additional attributes. `Edge.__getitem__` has been implemented to provide syntactic sugar for direct access to the `attr` dictionary. This enables attribute access as follows:\n",
     "\n",
     "```python\n",
-    "g[9, 10][\"color\"] = \"blue\"\n",
+    "g.get_edge(9, 10)[\"color\"] = \"blue\"\n",
     "```\n",
     "\n",
     ">**Note**\n",
@@ -397,7 +397,7 @@
    "source": [
     "g.add_edge(9, 10, weight=5.0)\n",
     "g.add_edges_from([(10, 11, 3.0), (10, 12, 2.5)])\n",
-    "g[10, 12].weight"
+    "g.get_edge(10, 12).weight"
    ]
   },
   {
